--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #fff1d0; /* Cream background */
+            background-color: #fff1d0; 
             background-image: linear-gradient(#fff1d0 2px, transparent 2px),
                              linear-gradient(90deg, #fff1d0 2px, transparent 2px);
             background-size: 20px 20px;
         }
 
         h1 {
-            color: #14213d; /* Dark blue */
+            color: #14213d; 
             text-align: center;
             margin-bottom: 30px;
             font-family: 'Georgia', serif;
@@ -47,7 +47,7 @@
         .input-section {
             flex: 1;
             min-width: 300px;
-            background-color: #ffffff; /* White sections */
+            background-color: #ffffff; 
             padding: 20px;
             border-radius: 0px;
             box-shadow: 5px 5px 0px #14213d;
@@ -58,7 +58,7 @@
         .results-section {
             flex: 1;
             min-width: 300px;
-            background-color: #ffffff; /* White sections */
+            background-color: #ffffff; 
             padding: 20px;
             border-radius: 0px;
             box-shadow: 5px 5px 0px #14213d;
@@ -69,7 +69,7 @@
         .visualization-section {
             flex: 2;
             min-width: 300px;
-            background-color: #ffffff; /* White sections */
+            background-color: #ffffff;
             padding: 20px;
             border-radius: 0px;
             box-shadow: 5px 5px 0px #14213d;
@@ -102,7 +102,7 @@
         }
 
         button {
-            background-color: #4361ee; /* Bright blue */
+            background-color: #4361ee; 
             color: white;
             cursor: pointer;
             font-weight: bold;
